# proof-sketcher

./: .bandit  .gitignore  .pre-commit-config.yaml  .proof-sketcher.yaml.example  80_percent_fix_strategy.md  ALPHA_RELEASE_FINAL_REFLECTION.md  ALPHA_STATUS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_PROGRESS_REPORT.md  CONTRIBUTING.md  DOCGEN4_INTEGRATION_PROGRESS.md  Dockerfile  EMERGENCY_TRIAGE_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  LSP_DEPRECATION_NOTICE.md  MANIFEST.in  MILESTONE_0_EMERGENCY_REPORT.md  MILESTONE_4_1_DOCUMENTATION_REPORT.md  MILESTONE_4_2_ALPHA_RELEASE_REPORT.md  MILESTONE_4_2_CICD_REPORT.md  PARSER_FIX_REPORT.md  PHASE_10_COMPLETION_REPORT.md  PHASE_10_DESIGN.md  PHASE_2_COMPLETE_ASSESSMENT.md  PHASE_3_COMPLETION_ASSESSMENT.md  PHASE_4_ALPHA_RELEASE_SUMMARY.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_7_PHOENIX_RECOVERY_PLAN.md  PIVOT_SUMMARY.md  PRODUCTION_READINESS_ASSESSMENT.md  PROJECT_HEALTH_REPORT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  README_OLD.md  RELEASE_CHECKLIST.md  (+69 more)
.github/: CODEOWNERS  CONTRIBUTING.md  branch-protection.json  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  codeql.yml  dependency-review.yml  monitoring.yml  pre-commit.yml  release.yml
.hypothesis/constants/: 05a311858c58d447  0cb1da7d3f4c8efb  0d8bb4e1144f8e1d  13c17f55a8e1b36a  13e093d98e8c8348  15f2cc8c3314191a  26103ab1c0ffded5  2e2bce2b3b2f1a82  302ea7ed3054e831  35acc5c9b969752a  374826e6eee39591  46c6597f762990b1  51a0b7628da78ba0  541ae2075e76fc68  55a8dd6b0b424f23  6778b934a8df2b23  6897e24acb3fdc15  7cad6df34649e062  7f0a21b4fb7c6ea8  7f91c1ef05daeab5  801700d95a002065  804b1d34db0c4eea  8495619fb8243d9b  8745b898b860cd58  89f79e4e4c7654b1  8e1e655e732b3aec  9a90e0f24138ef2e  9ab89270d979e8ae  a05392be02c5d3c1  ab4192c7582fed34  b11e7dee6fb4cf67  bcd06a6ce058b97c  c4a6a0aaa8285b49  c7e901a9375c2069  ccd61a33c42f04b2  d058add42e182325  d291e9fbe1470c13  da6a7774ff9b1f0c  db703407fa6a9cc3  df8b49b70fd961e5  (+4 more)
batch_output/: README.md  index.html
batch_output/html/: add_comm.html  add_zero.html  mul_one.html
batch_output/markdown/: add_comm.md  add_zero.md  mul_one.md
benchmark_results/: benchmark_results_20250708_011139.json
benchmarks/: README.md  performance_benchmarks.py  quick_benchmark.py
config/: __init__.py  config.py
demo_batch_output/demo_lean_project/: Applied.lean  Foundation.lean
demo_export_output/html/: Listlength_append.html
demo_export_output/markdown/: Listlength_append.md
demo_mathlib_integration/: Analysis.lean  CategoryTheory.lean  NumberTheory.lean  Topology.lean
demos/: COMPARISON_ANALYSIS.md  EXAMPLE_GALLERY.md  README.md  animator_demo.py  live_demo_script.py  production_demo.py
docgen_demo/: DEMO_DOCUMENTATION.md  README.md
docs/: DEVELOPMENT.md  QUICKSTART_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  api.md  cli-reference.md  conf.py  configuration.md  examples.md  getting-started.md  index.rst  installation.md  pre-commit-guide.md  production-status.md  user-guide.md
docs/api/: conf.py  index.rst  reference.md
docs/architecture/: overview.md
docs/communications/: blog_post.md  feedback_management.md  lean_zulip_announcement.md
docs/plugins/: development-guide.md
docs/reports/: FUNCTIONALITY_VALIDATION_REPORT.md  REPOSITORY_AUDIT_REPORT.md  bandit_report.json  classical_examples_report.md  error_handling_final_report.py  university_performance_report.json
docs/user/: DEVELOPMENT.md  TROUBLESHOOTING.md  api.md  doc-gen4-integration.md  examples.md  index.md  installation.md  pre-commit-guide.md  production-status.md
examples/: add_zero_animation.py  basic_usage.py  classical_examples_report.md  complex_proof.lean  induction_proof.lean  mathlib_example.lean  mathlib_real_world.lean  simple_proof.lean  test_classical_examples.py
examples/advanced/: topology.lean
examples/classical/: group_theory.lean  real_analysis.lean  simple_examples.lean  topology.lean
examples/lean_project/: Main.lean  ProofSketcherExamples.lean  lake-manifest.json  lakefile.lean
examples/lean_samples/: sample_theorems.lean
examples/showcase/: algebra_proofs.lean
examples/tutorial/: first_proof.lean
lean_extractor/: ExtractTheorem.lean  ExtractTheorem_simple.lean  lakefile_simple.lean  test.lean  test_simple.lean
performance_results/: performance_report.md
phase9_demo/: PHASE_9_COMPLETION_REPORT.md  advanced_composition_interactive.html  beginner_arithmetic_interactive.html  index.html  intermediate_induction_interactive.html
scripts/: check_test_existence.py  fix_proofstep_tests.py  prepare_clean_history.md  setup_cicd.sh  setup_pre_commit.sh
scripts/analysis/: error_handling_final_report.py
scripts/debug/: lean_parser_debug.py  manual_lean_test.py
src/proof_sketcher/: __init__.py  __main__.py  cli.py
templates/html/: index.html.jinja2  mathlib_style.html.jinja2  theorem.html.jinja2
tests/: __init__.py  conftest.py  conftest_animator.py  test_ai_generator_coverage.py  test_ai_integration.py  test_all_exporters_comprehensive.py  test_animation.py  test_animation_pipeline.py  test_animator.py  test_animator_complete.py  test_animator_coverage.py  test_animator_coverage_boost.py  test_animator_manim_mcp.py  test_animator_robustness.py  test_batch_processing.py  test_batch_processor.py  test_cache_coverage.py  test_claude_generator.py  test_cli.py  test_cli_additional.py  test_config.py  test_core_exceptions.py  test_core_interfaces.py  test_core_utils.py  test_end_to_end.py  test_enhanced_parser.py  test_enhanced_prompts.py  test_error_handling.py  test_errors.py  test_exporter.py  test_exporter_coverage_boost.py  test_exporter_jupyter.py  test_exporter_markdown.py  test_exporter_pdf.py  test_exporters.py  test_formula_extractor.py  test_generator.py  test_generator_cache.py  test_generator_models.py  test_integration.py  (+23 more)
tests/data/: cache_test.lean  (+10 more)
tools/: profile_performance.py  project_health.py  quality_fixer.py
(+296 files in other folders)
